<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp">

    <EditText
        android:id="@+id/difficulty_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/e_g_4"
        android:layout_marginEnd="75dp"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_above="@id/difficulty_editText"
        android:text="@string/choose_grid_size"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_below="@id/difficulty_editText"
        android:background="@drawable/rounded_button"
        android:elevation="2dp"
        android:padding="4dp"
        android:text="@string/start"
        android:textSize="18sp" />

</RelativeLayout>
